--- a/pagesa.html
+++ b/pagesa.html
@@ -1,4 +1,13 @@
+<?php
+include("connection.php");
+session_start();
+if (!isset($_SESSION['loggedin'])) {
+    header('Location: form.html');
+    exit;
+}
+else {
 
+echo"
 <!DOCTYPE html>
 <html>
 <head>
@@ -102,4 +111,4 @@
 
 </div>
 </body>
-</html>
+</html>";
